--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // 엑셀
+    implementation 'net.sourceforge.jexcelapi:jxl:2.6.12'
+
+    // json
+    implementation 'com.squareup.retrofit2:retrofit:2.8.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.8.0'
+
+    // 현재 위치
+    implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
 }
