--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,6 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+KAKAO_API_KEY="03f15509e89fea32bd75d30dcff0bd8e"
+AIR_KOREA_SERVICE_KEY="9A9M5XxrGKcWn%2BsL1Fh9u2rw3efSPF%2F1UAIOV1Eg6Am9Dj6o6Eoh0Onc7kQj63mpUgkkALKPyg8ffFdnwmwD5A%3D%3D"
